@@ -35,7 +35,6 @@ application/oda
 
 application/pdf
 	_description=PDF document
-	icon_filename=gnome-application-pdf.png
 	default_action_type=application
 	short_list_component_iids_for_novice_user_level=OAFIID:gpdf_component:892f2727-e2ec-423c-91ad-6f7b75fec6c8
 	short_list_component_iids_for_intermediate_user_level=OAFIID:gpdf_component:892f2727-e2ec-423c-91ad-6f7b75fec6c8
@@ -46,7 +45,6 @@ application/pdf
 
 application/pgp
 	_description=PGP message
-	icon_filename=gnome-application-pgp.png
 
 application/pgp-encrypted
 	_description=PGP-encrypted file
@@ -65,7 +63,6 @@ application/pkcs7-signature
 
 application/postscript
 	_description=PostScript document
-	icon_filename=gnome-application-postscript.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=ggv,gv,ghostview
 	short_list_application_ids_for_intermediate_user_level=ggv,gv,ghostview
@@ -111,7 +108,7 @@ application/vnd.ms-powerpoint
 # also audio/x-pn-realaudio, audio/x-real-audio
 application/vnd.rn-realmedia
 	_description=RealAudio/Video document
-	icon_filename=gnome-audio-x-pn-realaudio.png
+	icon_filename=gnome-audio-x-pn-realaudio
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=realplayer
 	short_list_application_ids_for_intermediate_user_level=realplayer
@@ -142,7 +139,7 @@ application/x-applix-word
 
 application/x-arj
 	_description=arj archive
-	icon_filename=gnome-compressed.png
+	icon_filename=gnome-compressed
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
 	short_list_application_ids_for_intermediate_user_level=guitar
@@ -160,7 +157,7 @@ application/x-bcpio
 application/x-bzip
 	_description=bzip-compressed file
 	vfs_method=bzip2
-	icon_filename=gnome-compressed.png
+	icon_filename=gnome-compressed
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
 	short_list_application_ids_for_intermediate_user_level=guitar
@@ -168,7 +165,7 @@ application/x-bzip
 
 application/x-bzip-compressed-tar
 	_description=tar archive (bzip2-compressed)
-	icon_filename=gnome-compressed.png
+	icon_filename=gnome-compressed
 	vfs_method=bzip2
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
@@ -189,7 +186,7 @@ application/x-class-file
 # we are aware of the crappiness of this description
 application/x-compress
 	_description=compress-compressed file
-	icon_filename=gnome-compressed.png
+	icon_filename=gnome-compressed
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
 	short_list_application_ids_for_intermediate_user_level=guitar
@@ -197,7 +194,7 @@ application/x-compress
 
 application/x-compressed-tar
 	_description=tar archive (gzip-compressed)
-	icon_filename=gnome-package.png
+	icon_filename=gnome-package
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
 	short_list_application_ids_for_intermediate_user_level=guitar
@@ -205,14 +202,14 @@ application/x-compressed-tar
 
 application/x-core-file
 	_description=memory dump
-	icon_filename=i-core.png
+	icon_filename=i-core
 
 application/x-cpio
 	_description=CPIO archive
 
 application/x-cpio-compressed
 	_description=CPIO archive (gzip-compressed)
-	icon_filename=gnome-compressed.png
+	icon_filename=gnome-compressed
 
 # also text/x-csh
 application/x-csh
@@ -221,7 +218,7 @@ application/x-csh
 
 application/x-deb
 	_description=Debian package
-	icon_filename=gnome-pack-deb.png
+	icon_filename=gnome-pack-deb
 
 application/x-dia-diagram
 	_description=Dia diagram
@@ -245,7 +242,7 @@ application/x-executable-binary
 
 application/x-font-afm
 	_description=Adobe font metrics
-	icon_filename=gnome-font-afm.png
+	icon_filename=gnome-font-afm
 
 application/x-font-bdf
 	_description=BDF font
@@ -264,7 +261,7 @@ application/x-font-linux-psf
 
 application/x-font-pcf
 	_description=PCF font
-	icon_filename=gnome-font-x-pcf.png
+	icon_filename=gnome-font-x-pcf
 
 application/x-font-speedo
 	_description=Speedo font
@@ -280,7 +277,7 @@ application/x-font-tex-tfm
 
 application/x-font-ttf
 	_description=TrueType font
-	icon_filename=gnome-font-ttf.png
+	icon_filename=gnome-font-ttf
 
 application/x-font-type1
 	_description=PostScript Type 1 font
@@ -318,7 +315,7 @@ application/x-gnumeric
 
 application/x-gtar
 	_description=gtar archive
-	icon_filename=gnome-package.png
+	icon_filename=gnome-package
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
 	short_list_application_ids_for_intermediate_user_level=guitar
@@ -326,7 +323,7 @@ application/x-gtar
 
 application/x-gzip
 	_description=gzip-compressed file
-	icon_filename=gnome-compressed.png
+	icon_filename=gnome-compressed
 	vfs_method=gzip
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
@@ -349,7 +346,6 @@ application/x-jbuilder-project
 
 application/x-kde-app-info
 	_description=KDE application details
-	icon_filename=gnome-application-x-kde-app-info.png
 
 application/x-killustrator
 	_description=KIllustrator document
@@ -382,7 +378,7 @@ application/x-kword
 
 application/x-lha
 	_description=LHARC archive
-	icon_filename=gnome-compressed.png
+	icon_filename=gnome-compressed
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
 	short_list_application_ids_for_intermediate_user_level=guitar
@@ -390,7 +386,7 @@ application/x-lha
 
 application/x-lhz
 	_description=LHA archive
-	icon_filename=gnome-compressed.png
+	icon_filename=gnome-compressed
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
 	short_list_application_ids_for_intermediate_user_level=guitar
@@ -410,7 +406,7 @@ application/x-netcdf
 
 application/x-object-file
 	_description=object code
-	icon_filename=gnome-objectfile.png
+	icon_filename=gnome-objectfile
 
 application/x-ogg
 	_description=ogg audio
@@ -440,7 +436,6 @@ application/x-perl
 
 application/x-php
 	_description=PHP script
-	icon_filename=gnome-application-x-php.png
 
 application/x-profile
 	_description=profiler results
@@ -463,7 +458,7 @@ application/x-rar
 #also application/x-rar
 application/x-rar-compressed
 	_description=RAR archive
-	icon_filename=gnome-package.png
+	icon_filename=gnome-package
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
 	short_list_application_ids_for_intermediate_user_level=guitar
@@ -471,11 +466,10 @@ application/x-rar-compressed
 
 application/x-reject
 	_description=rejected patch file
-	icon_filename=gnome-application-x-reject.png
 
 application/x-rpm
 	_description=RPM package
-	icon_filename=gnome-pack-rpm.png
+	icon_filename=gnome-pack-rpm
 	default_action_type=component
 
 application/x-shar
@@ -483,11 +477,11 @@ application/x-shar
 
 application/x-shared-library
 	_description=shared library
-	icon_filename=gnome-library.png
+	icon_filename=gnome-library
 
 application/x-shared-library-la
 	_description=shared library
-	icon_filename=gnome-library.png
+	icon_filename=gnome-library
 
 application/x-shockwave-flash
 	_description=Macromedia Flash file
@@ -531,7 +525,7 @@ application/x-sv4crc
 
 application/x-tar
 	_description=tar archive
-	icon_filename=gnome-package.png
+	icon_filename=gnome-package
 	vfs_method=tar
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
@@ -540,7 +534,7 @@ application/x-tar
 
 application/x-tex
 	_description=TeX document
-	icon_filename=gnome-tex.png
+	icon_filename=gnome-tex
 
 application/x-theme
 	_description=theme
@@ -554,7 +548,7 @@ application/x-troff
 
 application/x-troff-man-compressed
 	_description=manual page (compressed)
-	icon_filename=manual.png
+	icon_filename=manual
 
 application/x-unix-archive
 	_description=ar archive
@@ -581,7 +575,7 @@ application/x-zoo
 
 application/zip
 	_description=zip archive
-	icon_filename=gnome-compressed.png
+	icon_filename=gnome-compressed
 	vfs_method=zip
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
@@ -598,14 +592,13 @@ audio/ac3
 
 audio/basic
 	_description=basic audio
-	icon_filename=gnome-audio.png
+	icon_filename=gnome-audio
 
 audio/x-aifc
 	_description=AIFC audio
 
 audio/x-aiff
 	_description=AIFF audio
-	icon_filename=gnome-audio-x-aiff.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=grecord
 	short_list_application_ids_for_intermediate_user_level=grecord
@@ -613,7 +606,7 @@ audio/x-aiff
 
 audio/x-aiffc
 	_description=AIFF audio
-	icon_filename=gnome-audio-x-aiff.png
+	icon_filename=gnome-audio-x-aiff
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=grecord
 	short_list_application_ids_for_intermediate_user_level=grecord
@@ -624,11 +617,11 @@ audio/x-it
 
 audio/x-midi
 	_description=MIDI audio
-	icon_filename=gnome-audio-midi.png
+	icon_filename=gnome-audio-midi
 
 audio/x-mod
 	_description=MOD audio
-	icon_filename=gnome-audio-x-mod.png
+	icon_filename=gnome-audio-x-mod
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=soundtracker
 	short_list_application_ids_for_intermediate_user_level=soundtracker
@@ -670,7 +663,6 @@ audio/x-mpegurl
 # also application/vnd.rn-realmedia, audio/x-real-audio
 audio/x-pn-realaudio
 	_description=PN RealAudio document
-	icon_filename=gnome-audio-x-pn-realaudio.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=realplayer
 	short_list_application_ids_for_intermediate_user_level=realplayer
@@ -679,7 +671,7 @@ audio/x-pn-realaudio
 # also audio/x-pn-realaudio, application/vnd.rn-realmedia
 audio/x-real-audio
 	_description=RealAudio/Video document
-	icon_filename=gnome-audio-x-pn-realaudio.png
+	icon_filename=gnome-audio-x-pn-realaudio
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=realplayer
 	short_list_application_ids_for_intermediate_user_level=realplayer
@@ -701,7 +693,7 @@ audio/x-stm
 
 audio/x-ulaw
 	_description=Sun mu-law audio
-	icon_filename=gnome-audio-ulaw.png
+	icon_filename=gnome-audio-ulaw
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=grecord
 	short_list_application_ids_for_intermediate_user_level=grecord
@@ -716,7 +708,6 @@ audio/x-voc
 
 audio/x-wav
 	_description=wave audio
-	icon_filename=gnome-audio-x-wav.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=grecord,xmms,freeamp
 	short_list_application_ids_for_intermediate_user_level=grecord,xmms,freeamp
@@ -738,7 +729,6 @@ image/bmp
 	short_list_application_ids_for_novice_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_intermediate_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_advanced_user_level=eog,electric_eyes,gimp
-	icon_filename=gnome-image-bmp.png
 
 image/cgm
 	_description=CGM image
@@ -755,11 +745,9 @@ image/gif
 	short_list_application_ids_for_novice_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_intermediate_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_advanced_user_level=eog,electric_eyes,gimp
-	icon_filename=gnome-image-gif.png
 
 image/ief
 	_description=IEF image
-	icon_filename=gnome-image-ief.png
 
 image/jpeg
 	_description=JPEG image
@@ -770,7 +758,6 @@ image/jpeg
 	short_list_application_ids_for_novice_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_intermediate_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_advanced_user_level=eog,electric_eyes,gimp
-	icon_filename=gnome-image-jpeg.png
 
 # also image/x-png
 image/png
@@ -782,7 +769,6 @@ image/png
 	short_list_application_ids_for_novice_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_intermediate_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_advanced_user_level=eog,electric_eyes,gimp
-	icon_filename=gnome-image-png.png
 
 image/svg
 	_description=SVG art
@@ -800,7 +786,6 @@ image/tiff
 	short_list_application_ids_for_novice_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_intermediate_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_advanced_user_level=eog,electric_eyes,gimp
-	icon_filename=gnome-image-tiff.png
 
 image/vnd.dwg
 	_description=AutoCAD image
@@ -828,14 +813,14 @@ image/x-bmp
 	short_list_application_ids_for_novice_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_intermediate_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_advanced_user_level=eog,electric_eyes,gimp
-	icon_filename=gnome-image-bmp.png
+	icon_filename=gnome-image-bmp
 
 image/x-cmu-raster
 	_description=CMU raster image
 
 image/x-compressed-xcf
 	_description=compressed GIMP document
-	icon_filename=gnome-gimp.png
+	icon_filename=gnome-gimp
 
 image/x-ico
 	_description=Windows icon image
@@ -862,7 +847,7 @@ image/x-png
 	short_list_application_ids_for_novice_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_intermediate_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_advanced_user_level=eog,electric_eyes,gimp
-	icon_filename=gnome-image-png.png
+	icon_filename=gnome-image-png
 
 image/x-portable-anymap
 	_description=PNM image
@@ -883,7 +868,7 @@ image/x-portable-bitmap
 	short_list_application_ids_for_novice_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_intermediate_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_advanced_user_level=eog,electric_eyes,gimp
-	icon_filename=gnome-image-pbm.png
+	icon_filename=gnome-image-pbm
 
 image/x-portable-graymap
 	_description=PGM image
@@ -904,7 +889,7 @@ image/x-portable-pixmap
 	short_list_application_ids_for_novice_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_intermediate_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_advanced_user_level=eog,electric_eyes,gimp
-	icon_filename=gnome-image-ppm.png
+	icon_filename=gnome-image-ppm
 
 image/x-psd
 	_description=Photoshop document
@@ -912,15 +897,15 @@ image/x-psd
 	short_list_application_ids_for_novice_user_level=eog,gimp
 	short_list_application_ids_for_intermediate_user_level=eog,gimp
 	short_list_application_ids_for_advanced_user_level=eog,gimp
-	icon_filename=gnome-image-psd.png
+	icon_filename=gnome-image-psd
 
 image/x-rgb
 	_description=RGB image
-	icon_filename=gnome-image-rgb.png
+	icon_filename=gnome-image-rgb
 
 image/x-tga
 	_description=TarGA image
-	icon_filename=gnome-image-tga.png
+	icon_filename=gnome-image-tga
 
 image/x-wmf
 	_description=Windows metafile graphics
@@ -935,7 +920,7 @@ image/x-xbitmap
 	short_list_application_ids_for_novice_user_level=eog,gimp
 	short_list_application_ids_for_intermediate_user_level=eog,gimp
 	short_list_application_ids_for_advanced_user_level=eog,gimp
-	icon_filename=gnome-image-xbm.png
+	icon_filename=gnome-image-xbm
 
 image/x-xcf
 	_description=GIMP document
@@ -943,7 +928,7 @@ image/x-xcf
 	short_list_application_ids_for_novice_user_level=gimp
 	short_list_application_ids_for_intermediate_user_level=gimp
 	short_list_application_ids_for_advanced_user_level=gimp
-	icon_filename=gnome-image-xcf.png
+	icon_filename=gnome-image-xcf
 
 image/x-xfig
 	_description=xfig vector graphic
@@ -951,7 +936,6 @@ image/x-xfig
 	short_list_application_ids_for_novice_user_level=xfig
 	short_list_application_ids_for_intermediate_user_level=xfig
 	short_list_application_ids_for_advanced_user_level=xfig
-	icon_filename=gnome-image-x-xfig.png
 
 image/x-xpixmap
 	_description=XPM image
@@ -965,7 +949,7 @@ image/x-xpixmap
 
 image/x-xwindowdump
 	_description=X window image
-	icon_filename=gnome-image-xwd.png
+	icon_filename=gnome-image-xwd
 
 message/delivery-status
 	_description=mail delivery report
@@ -1276,7 +1260,6 @@ video/isivideo
 
 video/mpeg
 	_description=MPEG video
-	icon_filename=gnome-video-mpeg.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=vlc,xmps,plaympeg,omsomi,mpeg_play,gtv
 	short_list_application_ids_for_intermediate_user_level=vlc,xmps,plaympeg,omsomi,mpeg_play,gtv
@@ -1284,14 +1267,13 @@ video/mpeg
 
 video/msvideo
 	_description=MS video
-	icon_filename=gnome-video-x-msvideo.png
+	icon_filename=gnome-video-x-msvideo
 	short_list_application_ids_for_novice_user_level=xmps,omsomi,gtv,xanim
 	short_list_application_ids_for_intermediate_user_level=xmps,omsomi,gtv,xanim
 	short_list_application_ids_for_advanced_user_level=xmps,omsomi,gtv,xanim
 
 video/quicktime
 	_description=QuickTime movie
-	icon_filename=gnome-video-quicktime.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=xanim
 	short_list_application_ids_for_intermediate_user_level=xanim
@@ -1339,7 +1321,6 @@ video/x-ms-asf
 
 video/x-msvideo
 	_description=Microsoft video
-	icon_filename=gnome-video-x-msvideo.png
 	short_list_application_ids_for_novice_user_level=xmps,omsomi,xanim
 	short_list_application_ids_for_intermediate_user_level=xmps,omsomi,xanim
 	short_list_application_ids_for_advanced_user_level=xmps,omsomi,xanim
@@ -1401,19 +1382,19 @@ x-directory/webdav-prefer-directory
 
 x-special/device-block
 	_description=block device
-	icon_filename=i-harddisk.png
+	icon_filename=i-harddisk
 
 x-special/device-char
 	_description=character device
-	icon_filename=i-chardev.png
+	icon_filename=i-chardev
 
 x-special/fifo
 	_description=named pipe
-	icon_filename=i-fifo.png
+	icon_filename=i-fifo
 
 x-special/socket
 	_description=socket
-	icon_filename=i-sock.png
+	icon_filename=i-sock
 
 x-special/symlink
 	_description=symbolic link
